chore: remove overflow auto to avoid unnecessary bugs

--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -9,16 +9,10 @@ i {
 
 p {
   margin: 0;
-  overflow: auto;
 }
 
 h1,h2,h3,h4,h5,h6 {
   margin: 0;
-  overflow: auto;
-}
-
-div,section {
-  overflow: auto;
 }
 
 button {
